--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <link rel="icon" href="https://i.postimg.cc/59LXfLMC/bloxd-io-logo.png" type="image/png" />
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    /* -------------------- RESET & BASE -------------------- */
     * { box-sizing: border-box; margin:0; padding:0; }
     html, body { height:100%; overflow-x:hidden; font-family:'Poppins',sans-serif; }
     body {
@@ -18,12 +17,10 @@
     }
     @keyframes pageFade { from{opacity:0} to{opacity:1} }
 
-    /* -------------------- HEADER & SECTIONS -------------------- */
     #home { text-align:center; padding:3rem 1rem 1rem; }
     #home img { max-width:80%; filter:drop-shadow(0 0 20px #000); margin-bottom:2rem; }
     .links { display:flex; justify-content:center; gap:1rem; flex-wrap:wrap; }
 
-    /* Default neon pink buttons */
     .links a[href*="youtube.com"],
     .links a[href*="discord.com"] {
       font-family:'Orbitron',sans-serif;
@@ -37,7 +34,6 @@
       text-shadow: 0 0 5px #ff69b4, 0 0 10px #ff69b4;
     }
 
-    /* Hover effect */
     .links a[href*="youtube.com"]:hover,
     .links a[href*="discord.com"]:hover {
       background:#ff69b4;
@@ -68,12 +64,10 @@
     }
     .texturepack-item a:hover { background:#f0f; color:#fff; transform:scale(1.05); }
 
-    /* -------------------- FOOTER -------------------- */
     footer {
       background:rgba(0,0,0,0.8); text-align:center; padding:1rem; font-size:.9rem;
     }
 
-    /* -------------------- NEON FIRECRACKER CURSOR TRAIL -------------------- */
     .particle {
       position:absolute;
       border-radius:50%;
@@ -86,7 +80,6 @@
       100% { transform:scale(2.5); opacity:0; }
     }
 
-    /* Small credit text */
     .credit {
       position:fixed;
       bottom:10px;
@@ -120,7 +113,7 @@
         <a href="https://raw.githubusercontent.com/ParkourQueenYT/Bloxd.io-texturepacks/main/Bloxd%20EVENTS%20Official%20T-Pack.zip" id="download-button" download>
           Download Pack
         </a>
-        <p id="download-count">Downloads: 6</p>
+        <p id="download-count">Downloads: Loading...</p>
       </div>
     </div>
   </section>
@@ -129,41 +122,43 @@
     &copy; 2025 Parkour Queen YT. All rights reserved.
   </footer>
 
-  <!-- Firebase SDK -->
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js"></script>
-
   <script>
-    // Initialize Firebase
-    const firebaseConfig = {
-      apiKey: "your-api-key",
-      authDomain: "your-project-id.firebaseapp.com",
-      databaseURL: "https://your-project-id.firebaseio.com",
-      projectId: "your-project-id",
-      storageBucket: "your-project-id.appspot.com",
-      messagingSenderId: "your-sender-id",
-      appId: "your-app-id",
-      measurementId: "your-measurement-id"
-    };
+    document.addEventListener('mousemove', e => {
+      for (let i = 0; i < 4; i++) {
+        const p = document.createElement('div');
+        p.classList.add('particle');
+        const colors = ['#00ffe5','#ff00e0','#00ff88','#fffc00','#ff3c00'];
+        const c = colors[Math.floor(Math.random()*colors.length)];
+        p.style.background = c;
+        p.style.boxShadow = `0 0 10px ${c}, 0 0 20px ${c}`;
+        const size = Math.random()*6 + 4;
+        p.style.width = p.style.height = `${size}px`;
+        p.style.left = `${e.pageX + (Math.random()*20 - 10)}px`;
+        p.style.top = `${e.pageY + (Math.random()*20 - 10)}px`;
+        document.body.appendChild(p);
+        setTimeout(() => p.remove(), 600);
+      }
+    });
 
-    firebase.initializeApp(firebaseConfig);
+    const downloadButton = document.getElementById('download-button');
+    const downloadCountText = document.getElementById('download-count');
 
-    const downloadCountRef = firebase.database().ref('downloads/tpack');
+    // Abacus counter
+    downloadButton.addEventListener('click', () => {
+      fetch('https://abacus.jasoncameron.dev/hit/parkourqueenyt.github.io/downloads')
+        .then(res => res.json())
+        .then(data => {
+          downloadCountText.textContent = `Downloads: ${data.value}`;
+        });
+    });
 
-    document.getElementById('download-button').addEventListener('click', function() {
-      downloadCountRef.transaction(function(currentValue) {
-        return (currentValue || 0) + 1;
+    fetch('https://abacus.jasoncameron.dev/hit/parkourqueenyt.github.io/downloads')
+      .then(res => res.json())
+      .then(data => {
+        downloadCountText.textContent = `Downloads: ${data.value}`;
       });
-    });
-
-    downloadCountRef.on('value', function(snapshot) {
-      const currentCount = snapshot.val();
-      document.getElementById('download-count').textContent = `Downloads: ${currentCount}`;
-    });
   </script>
 
-  <!-- Small credit -->
-  <div class="credit">Made by Cube and Rohuu</div>
-
+  <div class="credit">Made by cube672</div>
 </body>
 </html>
